[project]
name = "langchain-ansh"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "langchain>=1.3.14",
    "langchain-google-genai>=4.3.1",
    "langchain-openai>=1.3.5",
    "openai>=2.46.0",
    "python-dotenv>=1.2.2",
]
